--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "scrapy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "scrape.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node scrape.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "get-video-dimensions": "^1.0.0",
+    "gfycat-api": "^0.0.4",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.13",
     "puppeteer": "^10.4.0"
