--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.13",
     "puppeteer": "^10.4.0"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
