--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "scrapy",
   "version": "1.0.0",
   "description": "",
-  "main": "scrape.js",
+  "main": "serial.js",
   "scripts": {
-    "start": "node scrape.js",
+    "start": "node serial.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
